--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ header {
 
 header.active {
     text-align: center;
-    height: 5rem;
+    height: 5.2rem;
     background-color: var(--clr-active-header);
     width: 100%;
     z-index: 10000;
@@ -83,7 +83,7 @@ header.active {
 .logo {
     width: 30%;
     float: left;
-    line-height: 5rem;
+    line-height: 5.2rem;
     white-space: nowrap;
 }
 
@@ -134,7 +134,7 @@ nav a:hover {
     border-radius: 100px;
     background-color: var(--clr-btn);
     box-shadow: 2px 2px 6px rgba(66, 66, 66, 0.418);
-    margin-top: 1.25rem;
+    margin-top: 1.35rem;
     margin-right: 1rem;
     transition: all 300ms ease-in-out;
 }
@@ -230,7 +230,7 @@ nav a:hover {
     /* text-shadow: 1px 1px 4px rgb(54, 54, 54); */
     font-weight: 500;
     line-height: 1.6em;
-    font-size: clamp(1rem, 1.25vw, 2rem);
+    font-size: clamp(.9rem, 1.25vw, 2rem);
 }
 
 .jumbo-text-area h2 {
@@ -322,7 +322,7 @@ main {
     z-index: 5;
     position: relative;
 
-    background-color: var(--clr-text-light);
+    background-color: var(--clr-active-header);
 }
 
 main h3 {
